@@ -1,0 +1,16 @@
+#source: size-1.s
+#ld: -T size-1.t
+#objdump: -s
+
+.*:     file format .*
+
+Contents of section \.text:
+ 0+00 (01)?000000(01)? (02)?000000(02)?                    ........        
+Contents of section \.data:
+ 0+08 (03)?000000(03)? (04)?000000(04)? (05)?000000(05)?           ............    
+Contents of section \.tdata:
+ 0+24 (06)?000000 07000000 08000000 09000000  ................
+ 0+34 (0a)?000000                             ....            
+Contents of section \.map:
+ 0+38 (08)?000000(08)? (0c)?000000(0c)? (10)?000000(10)? (14)?000000(14)?  ................
+ 0+48 (18)?000000(18)?                             ....            
