@@ -1,3 +1,8 @@
+2004-03-05  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* elf.c (map_sections_to_segments): Ignore .tbss sections for
+	layout purposes.
+
 2004-03-03  Alexandre Oliva  <aoliva@redhat.com>
 
 	* elflink.c (bfd_elf_record_link_assignment): Mark undefweak and
